--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -55,5 +55,40 @@
     "privacy": "隱私權政策",
     "terms": "服務條款",
     "contact": "聯絡我們"
+  },
+
+  "queue": {
+    "title": "轉檔佇列",
+    "waiting": "等待中",
+    "uploading": "上傳中",
+    "processing": "處理中",
+    "done": "已完成",
+    "error": "錯誤"
+  },
+
+  "video_settings": {
+    "title": "影片進階設定",
+    "codec": "編碼格式",
+    "resolution": "解析度",
+    "aspect_ratio": "寬高比",
+    "frame_rate": "影格率 (fps)",
+    "cancel": "取消",
+    "save": "儲存設定",
+
+    "codec_h264": "H.264 (MP4)",
+    "codec_h265": "H.265 / HEVC",
+    "codec_vp9": "VP9 (WebM)",
+    "codec_av1": "AV1",
+
+    "res_2160p": "4K (2160p)",
+    "res_1440p": "2K (1440p)",
+    "res_1080p": "Full HD (1080p)",
+    "res_720p": "HD (720p)",
+    "res_480p": "SD (480p)",
+
+    "ar_169": "16:9（寬螢幕）",
+    "ar_916": "9:16（手機直式）",
+    "ar_43": "4:3",
+    "ar_11": "1:1（正方形）"
   }
 }
