--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -55,5 +55,40 @@
     "privacy": "Privacy",
     "terms": "Terms",
     "contact": "Contact"
+  },
+
+  "queue": {
+    "title": "Conversion Queue",
+    "waiting": "Waiting",
+    "uploading": "Uploading",
+    "processing": "Processing",
+    "done": "Completed",
+    "error": "Error"
+  },
+
+  "video_settings": {
+    "title": "Advanced Video Settings",
+    "codec": "Codec",
+    "resolution": "Resolution",
+    "aspect_ratio": "Aspect Ratio",
+    "frame_rate": "Frame Rate",
+    "cancel": "Cancel",
+    "save": "Save Settings",
+
+    "codec_h264": "H.264 (MP4)",
+    "codec_h265": "H.265 / HEVC",
+    "codec_vp9": "VP9 (WebM)",
+    "codec_av1": "AV1",
+
+    "res_2160p": "4K (2160p)",
+    "res_1440p": "2K (1440p)",
+    "res_1080p": "Full HD (1080p)",
+    "res_720p": "HD (720p)",
+    "res_480p": "SD (480p)",
+
+    "ar_169": "16:9 (Widescreen)",
+    "ar_916": "9:16 (Mobile Portrait)",
+    "ar_43": "4:3",
+    "ar_11": "1:1 (Square)"
   }
 }
