--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -7,6 +7,8 @@
     "language_label": "Language",
     "language_en": "English",
     "language_zh": "中文"
+    "all_tools": "All tools"
+
   },
   "auth": {
     "login": "Log in",
