--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -6,7 +6,7 @@
     "pricing": "方案與價格",
     "language_label": "語言",
     "language_en": "English",
-    "language_zh": "中文"
+    "language_zh": "中文",
     "all_tools": "所有工具"
 
   },
