--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -6,7 +6,7 @@
     "pricing": "Pricing",
     "language_label": "Language",
     "language_en": "English",
-    "language_zh": "中文"
+    "language_zh": "中文",
     "all_tools": "All tools"
 
   },
