--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -93,4 +93,53 @@
     "ar_43": "4:3",
     "ar_11": "1:1 (Square)"
   }
+
+{
+  "hero": {
+    "title": "File Converter",
+    "subtitle": "Easily convert files from one format to another, online."
+  },
+
+  "how": {
+    "title": "How it works",
+    "steps": {
+      "1_title": "Upload your files",
+      "1_desc": "Browse or drag & drop.",
+      "2_title": "Choose output format",
+      "2_desc": "Pick JPG, MP4, PDF, MP3 and more.",
+      "3_title": "Convert in the cloud",
+      "3_desc": "Fast servers do the heavy work.",
+      "4_title": "Download instantly",
+      "4_desc": "Your files will be ready in seconds."
+    }
+  },
+
+  "why": {
+    "title": "Why choose WiseConvert?",
+    "fast_title": "Fast cloud processing",
+    "fast_desc": "High-performance servers convert your files quickly.",
+    "privacy_title": "Privacy-first",
+    "privacy_desc": "Files are encrypted and auto-deleted after a short period.",
+    "tools_title": "All-in-one toolset",
+    "tools_desc": "Convert images, videos, audio and documents in one place."
+  },
+
+  "pricing": {
+    "title": "Start free. Upgrade later.",
+    "free": "Free",
+    "free_desc": "Ideal for most users.",
+    "pro": "Pro",
+    "pro_desc": "Coming soon — for power users.",
+    "monthly": "per month"
+  },
+
+  "footer": {
+    "privacy": "Privacy",
+    "terms": "Terms",
+    "contact": "Contact"
+  }
+}
+
+  
+  
 }
